support for -XX:+PrintTenuringDistribution, -XX:+PrintGCApplicationStoppedTime, -XX:+PrintGCApplicationConcurrentTime added (output ignored)